fixed page list padding-bottom when player is visible

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -86,7 +86,7 @@ header a.backBtn { font-size: 21px; font-family: 'Economica', cursive; color: #f
 
 div.pageContainer { margin-top: 60px; position: relative; }
 
-#main { padding-bottom: 53px; }
+#main { padding-bottom: 69px; }
 #dim { display: none; height: 100%; width: 100%; position: fixed; left: 0; top: 0; z-index: 6000; background-color: #999; 
 filter: alpha(opacity=20); /* internet explorer */
 -khtml-opacity: 0.20;      /* khtml, old safari */
